# VoiceAssistant

./: .cursorignore  .env.example.new  .gitattributes  .gitignore  .golangci.yml  .nacos-integration-checklist.md  ALGO_CLIENT_QUICKSTART.md  ALGO_INTEGRATION_SUMMARY.md  ALGO_SERVICES_ITERATION_PLAN.md  ALGO_SERVICES_ROADMAP.md  ALL_SERVICES_ITERATION_MASTER_PLAN.md  CHANGELOG.md  CMD_SERVICES_ITERATION_PLAN.md  CMD_SERVICES_ROADMAP.md  CODE_REFACTORING_SUMMARY.md  CODE_REVIEW_COMPLETION_REPORT.md  CODE_REVIEW_INDEX.md  CODE_REVIEW_README.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DATABASE_INIT_COMPLETION.md  DB_AND_CLIENT_IMPLEMENTATION_SUMMARY.md  ENHANCED_AGENT_INTEGRATION_SUMMARY.md  FEATURE_COMPARISON_CHECKLIST.md  IMPLEMENTATION_COMPLETED.md  ITERATION_PLANS_INDEX.md  KNOWLEDGE_SERVICE_MERGE_SUMMARY.md  LICENSE  MAIN_AND_ROUTES_UPDATE_SUMMARY.md  MASTER_ITERATION_ROADMAP.md  MICROSERVICES_ENHANCEMENT_SUMMARY.md  Makefile  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_README.md  PHASE1_WEEK1_COMPLETION_REPORT.md  PHASE1_WEEK1_FINAL_REPORT.md  POSTHOG_INTEGRATION_SUMMARY.md  PROJECT_ITERATION_ROADMAP.md  (+39 more)
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: rag_optimization.md
.github/workflows/: cd.yml  ci.yml  test-improvements.yml  unused-code-check.yml
.reports/: go-unused.txt
algo/: .pre-commit-config.yaml  QUICK_START.sh  VENV_SETUP.md  _integrate_common_template.py  pip.conf  pyproject.toml  requirements-nacos.txt  setup-all-venvs.sh  setup-venv-parallel.sh
algo/agent-engine/: Dockerfile  IMPLEMENTATION_SUMMARY.md  ITER2_COMPLETION.md  ITERATION1_COMPLETED.md  Makefile  (+13 more)
api/: API-PROTOCOL-GUIDE.md  README.md  openapi.yaml
configs/: CONFIG_GUIDE.md  README.md  agent-engine.yaml  ai-orchestrator.yaml  algo-services.yaml  analytics-service.yaml  conversation-service-enhanced.yaml  conversation-service.yaml  identity-service.yaml  knowledge-service.yaml  model-router.yaml  models.yaml  nacos.yaml  notification-service.yaml  observability.yaml  rag-engine.yaml  rag-enhanced.yaml  resilience.yaml  services-client.yaml  services-integration.yaml  services.yaml
docs/: ARCHITECTURE_REVIEW.md  ARCHIVE_SUMMARY.md  CODE_REVIEW.md  CODE_REVIEW_ITERATION_PLAN_2025Q4.md  COMPLETION_SUMMARY.md  CURSOR_PERFORMANCE_OPTIMIZATION.md  DETAILED_COMPLETION_REPORT.md  ENHANCED_AGENT_INTEGRATION.md  EXECUTION_PROGRESS.md  EXECUTIVE_SUMMARY_TODO.md  FEATURE_MIGRATION_REPORT.md  FINAL_PROJECT_SUMMARY.md  FINAL_SUMMARY.md  INCOMPLETE_FEATURES.md  INCOMPLETE_FEATURES_CHECKLIST.md  INCOMPLETE_FEATURES_SUMMARY.md  INCOMPLETE_FEATURES_副本.md  ITERATION_EXECUTION_CHECKLIST.md  ITERATION_EXECUTIVE_SUMMARY.md  ITERATION_PLAN.md  ITERATION_PLAN_V2.md  ITERATION_ROADMAP_2025Q4.md  NACOS_QUICKSTART.md  NEXT_ITERATION_PLAN.md  P0_IMPLEMENTATION_GUIDE.md  P0_PROGRESS.md  P0_PROGRESS_REPORT.md  P1_PROGRESS_REPORT.md  PROJECT_MASTER_PLAN.md  README.md  TASK_CHECKLIST_V2.md  TODO_AUDIT_REPORT.md  TODO_BY_FILE.md  TODO_REVIEW_SUMMARY.md  TODO_TRACKER.md  VoiceAssistant-00-总览.md  VoiceAssistant-01-AI-Orchestrator.md  VoiceAssistant-02-Conversation-Service.md  VoiceAssistant-03-Identity-Service.md  VoiceAssistant-04-Knowledge-Service(go版本).md  (+55 more)
examples/: algo_client_example.go
scripts/: README.md  analyze-unused-code.py  backup-restore.sh  build.sh  check-config-consistency.sh  check-cursor-performance.sh  check-python-deps.sh  check-unused-code.sh  clean-caches.sh  create-agent-issues.sh  create_roadmap_issues.py  deploy-k8s.sh  fix-exception-chains.py  fix-missing-imports.py  fix-proto-paths.sh  fix-python-imports.py  init_retrieval_optimization.sh  migrate-apisix-to-istio.sh  migrate-istio-to-apisix.sh  monitoring-dashboard.sh  monitoring.sh  nacos-setup.sh  optimize-cursor.sh  proto-gen.sh  run-tests.sh  start-monitoring.sh  stop-monitoring.sh  test-algo-clients.sh  test-auth.sh  test-services.sh  todo-scan.sh  update-proto.sh  validate-config.sh  verify-integration.sh  verify-optimization.sh  verify-static-analysis.sh
(+1323 files in other folders)
